--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
+  <link href="https://vjs.zencdn.net/7.10.2/video-js.css" rel="stylesheet" /> 
   <link rel="icon" href="<%= BASE_URL %>favicon.ico">
   <title>NweOo</title>
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Padauk:400,500,700">
@@ -14,6 +15,7 @@
       font-family: Padauk, sans-serif;
     }
   </style>
+  <script src="https://vjs.zencdn.net/7.10.2/video.min.js"></script> 
 </head>
 
 <body>
