--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@mdi/font@latest/css/materialdesignicons.min.css">
   <style>
     * {
-      font-family: Padauk, sans-serif;
+      font-family: Padauk, sans-serif !important;
     }
   </style>
 </head>
