--- a/public/index.html
+++ b/public/index.html
@@ -9,8 +9,10 @@
   <title>NweOo</title>
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Padauk:400,500,700">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@mdi/font@latest/css/materialdesignicons.min.css">
+  <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+  <link rel="icon" href="/favicon.ico" type="image/x-icon">
   <style>
-    * {
+    h1, h2, h3, h4, h5, h6, p, a, span, div, mm-font {
       font-family: Padauk, sans-serif !important;
     }
   </style>
