--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,8 @@
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="mobile-web-app-capable" content="yes">
+  <meta name="title" content="NweOo">
+  <meta name="description" content="မတ်လ ၁၂၊ သေဆုံးသူ(၈၂)ဦး စုစုပေါင်း(၂၀၉၂)ဦး ဖမ်းစီးထိန်းသိမ်းခဲ့ပြီး လက်ရှိဖမ်းစီးခံနေရသူ(၁၇၇၃)ဦး">
   <link rel="icon" href="<%= BASE_URL %>favicon.ico">
   <title>NweOo</title>
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Padauk:400,500,700">
