--- a/public/index.html
+++ b/public/index.html
@@ -7,14 +7,12 @@
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="mobile-web-app-capable" content="yes">
-  <meta name="title" content="NweOo">
-  <meta name="description" content="မတ်လ ၁၂၊ သေဆုံးသူ(၈၂)ဦး စုစုပေါင်း(၂၀၉၂)ဦး ဖမ်းစီးထိန်းသိမ်းခဲ့ပြီး လက်ရှိဖမ်းစီးခံနေရသူ(၁၇၇၃)ဦး">
-  <link rel="icon" href="<%= BASE_URL %>favicon.ico">
+  <meta name="og:title" content="NweOo">
+  <meta name="og:description" content="မတ်လ ၁၂၊ သေဆုံးသူ(၈၂)ဦး စုစုပေါင်း(၂၀၉၂)ဦး ဖမ်းစီးထိန်းသိမ်းခဲ့ပြီး လက်ရှိဖမ်းစီးခံနေရသူ(၁၇၇၃)ဦး">
+  <meta name="og:image" content="https://www.nweoo.com/images/20210313_000741.jpg">
   <title>NweOo</title>
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Padauk:400,500,700">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@mdi/font@latest/css/materialdesignicons.min.css">
-  <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
-  <link rel="icon" href="/favicon.ico" type="image/x-icon">
   <style>
     h1, h2, h3, h4, h5, h6, p, a, span, div, mm-font {
       font-family: Padauk, sans-serif !important;
