--- a/public/index.html
+++ b/public/index.html
@@ -8,13 +8,14 @@
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="mobile-web-app-capable" content="yes">
   <meta name="og:title" content="NweOo">
-  <meta name="og:description" content="မတ်လ ၁၂၊ သေဆုံးသူ(၈၂)ဦး စုစုပေါင်း(၂၀၉၂)ဦး ဖမ်းစီးထိန်းသိမ်းခဲ့ပြီး လက်ရှိဖမ်းစီးခံနေရသူ(၁၇၇၃)ဦး">
+  <meta name="og:description"
+    content="မတ်လ ၁၂၊ သေဆုံးသူ(၈၂)ဦး စုစုပေါင်း(၂၀၉၂)ဦး ဖမ်းစီးထိန်းသိမ်းခဲ့ပြီး လက်ရှိဖမ်းစီးခံနေရသူ(၁၇၇၃)ဦး">
   <meta name="og:image" content="https://www.nweoo.com/images/20210313_000741.jpg">
   <title>NweOo</title>
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Padauk:400,500,700">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@mdi/font@latest/css/materialdesignicons.min.css">
   <style>
-    h1, h2, h3, h4, h5, h6, p, a, span, div, mm-font {
+    .mm-font {
       font-family: Padauk, sans-serif !important;
     }
   </style>
