--- a/public/index.html
+++ b/public/index.html
@@ -7,15 +7,21 @@
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="mobile-web-app-capable" content="yes">
+  <meta name="title" content="NweOo">
+  <meta name="description"
+    content="မတ်လ ၁၅ နေ့ရက်ထိ သေဆုံးသူ (၁၈၉) ဦး၊ လက်ရှိဖမ်းစီးထိန်းသိမ်းခံရသူ (၁,၈၃၇) ဦး။">
   <meta name="og:title" content="NweOo">
   <meta name="og:description"
-    content="မတ်လ ၁၂၊ သေဆုံးသူ(၈၂)ဦး စုစုပေါင်း(၂၀၉၂)ဦး ဖမ်းစီးထိန်းသိမ်းခဲ့ပြီး လက်ရှိဖမ်းစီးခံနေရသူ(၁၇၇၃)ဦး">
-  <meta name="og:image" content="https://www.nweoo.com/images/20210313_000741.jpg">
+    content="မတ်လ ၁၅ နေ့ရက်ထိ သေဆုံးသူ (၁၈၉) ဦး၊ လက်ရှိဖမ်းစီးထိန်းသိမ်းခံရသူ (၁,၈၃၇) ဦး။">
+  <meta name="twitter:title" content="NweOo">
+  <meta name="twitter:description"
+    content="မတ်လ ၁၅ နေ့ရက်ထိ သေဆုံးသူ (၁၈၉) ဦး၊ လက်ရှိဖမ်းစီးထိန်းသိမ်းခံရသူ (၁,၈၃၇) ဦး။">
+  <meta name="og:image" content="https://www.nweoo.com/images/nweoo-cover.jpg">
   <title>NweOo</title>
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Padauk:400,500,700">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@mdi/font@latest/css/materialdesignicons.min.css">
   <style>
-    .mm-font {
+    *, .mm-font {
       font-family: Padauk, sans-serif !important;
     }
   </style>
