--- a/public/index.html
+++ b/public/index.html
@@ -3,23 +3,25 @@
 
 <head>
   <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width,initial-scale=1.0">
-  <meta name="apple-mobile-web-app-capable" content="yes">
-  <meta name="mobile-web-app-capable" content="yes">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width,initial-scale=1.0" />
+  <meta name="apple-mobile-web-app-capable" content="yes" />
+  <meta name="mobile-web-app-capable" content="yes" />
+  <meta name="fb:app_id" content="2927529797469638" />
+  <meta name="og:url" content="https://www.nweoo.com">
   <meta name="title" content="NweOo">
-  <meta name="description"
-    content="မတ်လ ၁၅ နေ့ရက်ထိ သေဆုံးသူ (၁၈၉) ဦး၊ လက်ရှိဖမ်းစီးထိန်းသိမ်းခံရသူ (၁,၈၃၇) ဦး။">
   <meta name="og:title" content="NweOo">
+  <meta name="twitter:title" content="NweOo" />
+  <meta name="description"
+    content="မတ်လ ၁၅ နေ့ရက်ထိ သေဆုံးသူ (၁၈၉) ဦး၊ လက်ရှိဖမ်းစီးထိန်းသိမ်းခံရသူ (၁,၈၃၇) ဦး။" />
+  <meta name="og:image" content="/images/nweoo-cover.jpg" />
   <meta name="og:description"
-    content="မတ်လ ၁၅ နေ့ရက်ထိ သေဆုံးသူ (၁၈၉) ဦး၊ လက်ရှိဖမ်းစီးထိန်းသိမ်းခံရသူ (၁,၈၃၇) ဦး။">
-  <meta name="twitter:title" content="NweOo">
+    content="မတ်လ ၁၅ နေ့ရက်ထိ သေဆုံးသူ (၁၈၉) ဦး၊ လက်ရှိဖမ်းစီးထိန်းသိမ်းခံရသူ (၁,၈၃၇) ဦး။" />
   <meta name="twitter:description"
-    content="မတ်လ ၁၅ နေ့ရက်ထိ သေဆုံးသူ (၁၈၉) ဦး၊ လက်ရှိဖမ်းစီးထိန်းသိမ်းခံရသူ (၁,၈၃၇) ဦး။">
-  <meta name="og:image" content="https://www.nweoo.com/images/nweoo-cover.jpg">
+    content="မတ်လ ၁၅ နေ့ရက်ထိ သေဆုံးသူ (၁၈၉) ဦး၊ လက်ရှိဖမ်းစီးထိန်းသိမ်းခံရသူ (၁,၈၃၇) ဦး။" />
   <title>NweOo</title>
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Padauk:400,500,700">
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@mdi/font@latest/css/materialdesignicons.min.css">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Padauk:400,500,700" />
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@mdi/font@latest/css/materialdesignicons.min.css" />
   <style>
     *, .mm-font {
       font-family: Padauk, sans-serif !important;
