--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="mm">
 
 <head>
   <meta charset="utf-8">
@@ -14,7 +14,7 @@
   <meta name="twitter:title" content="NweOo" />
   <meta name="description"
     content="မတ်လ ၁၅ နေ့ရက်ထိ သေဆုံးသူ (၁၈၉) ဦး၊ လက်ရှိဖမ်းစီးထိန်းသိမ်းခံရသူ (၁,၈၃၇) ဦး။" />
-  <meta name="og:image" content="/images/nweoo-cover.jpg" />
+  <meta name="og:image" content="/images/nweoo_cover.jpg" />
   <meta name="og:description"
     content="မတ်လ ၁၅ နေ့ရက်ထိ သေဆုံးသူ (၁၈၉) ဦး၊ လက်ရှိဖမ်းစီးထိန်းသိမ်းခံရသူ (၁,၈၃၇) ဦး။" />
   <meta name="twitter:description"
@@ -23,7 +23,7 @@
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Padauk:400,500,700" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@mdi/font@latest/css/materialdesignicons.min.css" />
   <style>
-    *, .mm-font {
+    [lang=mm] *, .mm-font {
       font-family: Padauk, sans-serif !important;
     }
   </style>
