--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,8 @@
   <meta name="twitter:title" content="NweOo" />
   <meta name="description"
     content="မတ်လ ၁၅ နေ့ရက်ထိ သေဆုံးသူ (၁၈၉) ဦး၊ လက်ရှိဖမ်းစီးထိန်းသိမ်းခံရသူ (၁,၈၃၇) ဦး။" />
+  <meta name="og:image:alt" content="NweOo" />
+  <meta name="og:type" content="image/jpg" />
   <meta name="og:image" content="/images/nweoo_cover.jpg" />
   <meta name="og:description"
     content="မတ်လ ၁၅ နေ့ရက်ထိ သေဆုံးသူ (၁၈၉) ဦး၊ လက်ရှိဖမ်းစီးထိန်းသိမ်းခံရသူ (၁,၈၃၇) ဦး။" />
