--- a/public/index.html
+++ b/public/index.html
@@ -9,18 +9,12 @@
   <meta name="mobile-web-app-capable" content="yes" />
   <meta name="fb:app_id" content="2927529797469638" />
   <meta name="og:url" content="https://www.nweoo.com">
-  <meta name="title" content="NweOo">
   <meta name="og:title" content="NweOo">
   <meta name="twitter:title" content="NweOo" />
   <meta name="description"
-    content="မတ်လ ၁၅ နေ့ရက်ထိ သေဆုံးသူ (၁၈၉) ဦး၊ လက်ရှိဖမ်းစီးထိန်းသိမ်းခံရသူ (၁,၈၃၇) ဦး။" />
-  <meta name="og:image:alt" content="NweOo" />
-  <meta name="og:type" content="image/jpg" />
+    content="မတ်(၁၅)နေ့ သေဆုံးသူ(၂၀၈) စုစု‌ေပါင်း(၂၁၉၁)ဖမ်းစီးထိန်းသိမ်းခဲ့ပြီး(၃၁၇)ပြန်လွတ်လာပါတယ်။" />
+  <meta name="og:type" content="website" />
   <meta name="og:image" content="/images/nweoo_cover.jpg" />
-  <meta name="og:description"
-    content="မတ်လ ၁၅ နေ့ရက်ထိ သေဆုံးသူ (၁၈၉) ဦး၊ လက်ရှိဖမ်းစီးထိန်းသိမ်းခံရသူ (၁,၈၃၇) ဦး။" />
-  <meta name="twitter:description"
-    content="မတ်လ ၁၅ နေ့ရက်ထိ သေဆုံးသူ (၁၈၉) ဦး၊ လက်ရှိဖမ်းစီးထိန်းသိမ်းခံရသူ (၁,၈၃၇) ဦး။" />
   <title>NweOo</title>
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Padauk:400,500,700" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@mdi/font@latest/css/materialdesignicons.min.css" />
