--- a/public/index.html
+++ b/public/index.html
@@ -8,11 +8,12 @@
   <meta name="apple-mobile-web-app-capable" content="yes" />
   <meta name="mobile-web-app-capable" content="yes" />
   <meta name="fb:app_id" content="2927529797469638" />
+  <meta name="fb:pages" content="113483134124452" />
   <meta name="og:url" content="https://www.nweoo.com">
   <meta name="og:title" content="NweOo">
   <meta name="twitter:title" content="NweOo" />
   <meta name="description"
-    content="မတ်(၁၅)နေ့ သေဆုံးသူ(၂၀၈) စုစု‌ေပါင်း(၂၁၉၁)ဖမ်းစီးထိန်းသိမ်းခဲ့ပြီး(၃၁၇)ပြန်လွတ်လာပါတယ်။" />
+    content="မတ်(၁၉)နေ့ သေဆုံးသူ(၂၇၇) စုစု‌ေပါင်း(၂၃၃၀)ဖမ်းစီးထိန်းသိမ်းခဲ့ပြီး (၃၅၀)ပြန်လွတ်လာပါတယ်။" />
   <meta name="og:type" content="website" />
   <meta name="og:image" content="/images/nweoo_cover.jpg" />
   <title>NweOo</title>
