--- a/public/index.html
+++ b/public/index.html
@@ -12,15 +12,14 @@
   <meta name="og:url" content="https://www.nweoo.com">
   <meta name="og:title" content="NweOo">
   <meta name="twitter:title" content="NweOo" />
-  <meta name="description"
-    content="မတ်(၁၉)နေ့ သေဆုံးသူ(၂၇၇) စုစု‌ေပါင်း(၂၃၃၀)ဖမ်းစီးထိန်းသိမ်းခဲ့ပြီး (၃၅၀)ပြန်လွတ်လာပါတယ်။" />
   <meta name="og:type" content="website" />
   <meta name="og:image" content="/images/nweoo_cover.jpg" />
   <title>NweOo</title>
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Padauk:400,500,700" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@mdi/font@latest/css/materialdesignicons.min.css" />
   <style>
-    [lang=mm] *, .mm-font {
+    [lang=mm] *,
+    .mm-font {
       font-family: Padauk, sans-serif !important;
     }
   </style>
