--- a/public/index.html
+++ b/public/index.html
@@ -4,16 +4,15 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width,initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
   <meta name="mobile-web-app-capable" content="yes" />
-  <meta name="fb:app_id" content="2927529797469638" />
-  <meta name="fb:pages" content="113483134124452" />
-  <meta name="og:url" content="https://www.nweoo.com">
-  <meta name="og:title" content="NweOo">
+  <meta name="fb:pages" property="fb:pages" content="113483134124452" />
+  <meta name="og:url" property="og:url" content="https://nweoo.com">
+  <meta name="og:title" property="og:title" content="NweOo">
   <meta name="twitter:title" content="NweOo" />
-  <meta name="og:type" content="website" />
-  <meta name="og:image" content="/images/nweoo_cover.jpg" />
+  <meta name="og:type" name="og:type" content="website" />
+  <meta name="og:image" name="og:image" content="/images/nweoo_cover.jpg" />
   <title>NweOo</title>
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Padauk:400,500,700" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@mdi/font@latest/css/materialdesignicons.min.css" />
