--- a/public/index.html
+++ b/public/index.html
@@ -11,8 +11,8 @@
   <meta name="og:url" property="og:url" content="https://nweoo.com">
   <meta name="og:title" property="og:title" content="NweOo">
   <meta name="twitter:title" content="NweOo" />
-  <meta name="og:type" name="og:type" content="website" />
-  <meta name="og:image" name="og:image" content="/images/nweoo_cover.jpg" />
+  <meta name="og:type" property="og:type" content="website" />
+  <meta name="og:image" property="og:image" content="https://storage.googleapis.com/nwe-oo.appspot.com/sms-reporter/sms-reporter-tips-1.jpg" />
   <title>NweOo</title>
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Padauk:400,500,700" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@mdi/font@latest/css/materialdesignicons.min.css" />
