--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
   <meta name="og:title" property="og:title" content="NweOo">
   <meta name="twitter:title" content="NweOo" />
   <meta name="og:type" property="og:type" content="website" />
-  <meta name="og:image" property="og:image" content="https://storage.googleapis.com/nwe-oo.appspot.com/sms-reporter/ads-1.jpg" />
+  <meta name="og:image" property="og:image" content="https://storage.googleapis.com/nwe-oo.appspot.com/sms-reporter/cover-mar28.jpg" />
   <title>NweOo</title>
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Padauk:400,500,700" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@mdi/font@latest/css/materialdesignicons.min.css" />
