--- a/public/index.html
+++ b/public/index.html
@@ -21,6 +21,7 @@
       font-family: Padauk, sans-serif !important;
     }
   </style>
+  <script data-ad-client="ca-pub-1414295736005860" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 </head>
 
 <body>
