--- a/public/index.html
+++ b/public/index.html
@@ -22,9 +22,12 @@
     }
   </style>
   <script data-ad-client="ca-pub-1414295736005860" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+  <script async custom-element="amp-auto-ads" src="https://cdn.ampproject.org/v0/amp-auto-ads-0.1.js">
+</script>
 </head>
 
 <body>
+  <amp-auto-ads type="adsense" data-ad-client="ca-pub-1414295736005860"></amp-auto-ads>
   <noscript>
     <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled.
         Please enable it to continue.</strong>
