--- a/public/index.html
+++ b/public/index.html
@@ -8,22 +8,25 @@
   <meta name="apple-mobile-web-app-capable" content="yes" />
   <meta name="mobile-web-app-capable" content="yes" />
   <meta name="fb:pages" property="fb:pages" content="113483134124452" />
-  <meta name="og:url" property="og:url" content="https://nweoo.com">
   <meta name="og:title" property="og:title" content="NweOo">
-  <meta name="twitter:title" content="NweOo" />
+  <meta name="og:description" property="og:description"
+    content="သတင်းမီဒီယာများ လွတ်လပ်စွာစီးဆင်းနိုင်စေရန် လွတ်လပ်သောအလွတ်တန်း Web Developer များမှကူညီရန်သတင်းမီဒီယာများ လွတ်လပ်စွာစီးဆင်းနိုင်စေရန် လွတ်လပ်သောအလွတ်တန်း Web Developer များမှကူညီရန်" />
+  <meta name="og:url" property="og:url" content="https://nweoo.com" />
   <meta name="og:type" property="og:type" content="website" />
-  <meta name="og:image" property="og:image" content="/images/cover-mar29.jpg" />
+  <meta name="og:image" property="og:image" content="https://nweoo.com/images/cover-mar30.jpg" />
   <title>NweOo</title>
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Padauk:400,500,700" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@mdi/font@latest/css/materialdesignicons.min.css" />
   <style>
+    [lang=mm],
     [lang=mm] * {
       font-family: Padauk, sans-serif !important;
     }
   </style>
-  <script data-ad-client="ca-pub-1414295736005860" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+  <script data-ad-client="ca-pub-1414295736005860" async
+    src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
   <script async custom-element="amp-auto-ads" src="https://cdn.ampproject.org/v0/amp-auto-ads-0.1.js">
-</script>
+  </script>
 </head>
 
 <body>
