--- a/public/index.html
+++ b/public/index.html
@@ -8,20 +8,26 @@
   <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
   <meta name="mobile-web-app-capable" content="yes" />
+  <meta name="fb:app_id" property="fb:app_id" content="1240461186326353" />
   <meta name="fb:pages" property="fb:pages" content="113483134124452" />
-  <meta name="og:title" property="og:title" content="NweOo">
+  <meta name="og:title" property="og:title" content="NweOo Report">
   <meta name="og:description" property="og:description"
-    content="သတင်းမီဒီယာများ လွတ်လပ်စွာစီးဆင်းနိုင်စေရန် လွတ်လပ်သောအလွတ်တန်း Web Developer များမှကူညီရန်သတင်းမီဒီယာများ လွတ်လပ်စွာစီးဆင်းနိုင်စေရန် လွတ်လပ်သောအလွတ်တန်း Web Developer များမှကူညီရန်" />
+    content="+66 92 865 0591 ကို SMS ပေးပို့ပြီး အွန်လိုင်းပေါ်တင်နိုင်ပါပြီ။" />
   <meta name="og:url" property="og:url" content="https://nweoo.com" />
   <meta name="og:type" property="og:type" content="website" />
   <meta name="og:image" property="og:image" content="https://nweoo.com/images/cover-mar30.jpg" />
   <title>NweOo</title>
+  <link rel="stylesheet" href="/css/style.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Padauk:400,500,700" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@mdi/font@latest/css/materialdesignicons.min.css" />
   <style>
     [lang=mm],
     [lang=mm] * {
-      font-family: Padauk, sans-serif !important;
+      font-family: 'Padauk', 'Pyidaungsu', sans-serif !important;
+    }
+
+    [lang=zg] {
+      font-family: 'Noto Sans Zawgyi' !important;
     }
   </style>
   <script data-ad-client="ca-pub-1414295736005860" async
