--- a/public/index.html
+++ b/public/index.html
@@ -10,12 +10,12 @@
   <meta name="mobile-web-app-capable" content="yes" />
   <meta name="fb:app_id" property="fb:app_id" content="1240461186326353" />
   <meta name="fb:pages" property="fb:pages" content="113483134124452" />
-  <meta name="og:title" property="og:title" content="NweOo Report">
+  <meta name="og:title" property="og:title" content="NweOo">
   <meta name="og:description" property="og:description"
     content="+66 92 865 0591 ကို SMS ပေးပို့ပြီး အွန်လိုင်းပေါ်တင်နိုင်ပါပြီ။" />
   <meta name="og:url" property="og:url" content="https://nweoo.com" />
   <meta name="og:type" property="og:type" content="website" />
-  <meta name="og:image" property="og:image" content="https://nweoo.com/images/cover-mar30.jpg" />
+  <meta name="og:image" property="og:image" content="https://nweoo.com/images/cover.jpg" />
   <title>NweOo</title>
   <link rel="stylesheet" href="/css/style.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Padauk:400,500,700" />
