--- a/public/index.html
+++ b/public/index.html
@@ -40,7 +40,7 @@
   <style>
     [lang=mm],
     [lang=mm] * {
-      font-family: 'Padauk', 'Pyidaungsu', sans-serif !important;
+      font-family: 'Padauk', 'Pyidaungsu', sans-serif;
     }
 
     [lang=zg] {
