--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
   <meta name="fb:pages" property="fb:pages" content="113483134124452" />
   <meta name="og:title" property="og:title" content="NweOo">
   <meta name="og:description" property="og:description"
-    content="+66 92 865 0591 ကို SMS ပေးပို့ပြီး အွန်လိုင်းပေါ်တင်နိုင်ပါပြီ။" />
+    content="SMS ပေးပို့ပြီး အွန်လိုင်းပေါ်တင်နိုင်သလို သတင်းတွေလည်းရယူနိုင်ပါတယ်။" />
   <meta name="og:url" property="og:url" content="https://nweoo.com" />
   <meta name="og:type" property="og:type" content="website" />
   <meta name="og:image" property="og:image" content="https://nweoo.com/images/cover.jpg" />
