--- a/public/index.html
+++ b/public/index.html
@@ -1,84 +1,175 @@
 <!DOCTYPE html>
 
 <html lang="mm">
+  <head>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta
+      name="viewport"
+      content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0"
+    />
+    <meta name="fb:app_id" property="fb:app_id" content="1240461186326353" />
+    <meta name="fb:pages" property="fb:pages" content="113483134124452" />
+    <meta name="og:title" property="og:title" content="NweOo" />
+    <meta
+      name="og:description"
+      property="og:description"
+      content="သတင်းမှန်များကို အချိန်နဲ့တပြေးညီ သိရှိနိုင်အောင် ဆောင်ရွက်ပေးနေပါတယ်။"
+    />
+    <meta name="og:url" property="og:url" content="https://www.nweoo.com" />
+    <meta name="og:type" property="og:type" content="website" />
+    <meta
+      name="og:image"
+      property="og:image"
+      content="https://nweoo.com/images/cover.jpg"
+    />
+    <title>NweOo</title>
+    <meta name="mobile-web-app-capable" content="yes" />
+    <meta
+      name="msapplication-TileImage"
+      content="/images/icons/ms-icon-144x144.png"
+    />
+    <meta name="msapplication-TileColor" content="#ffffff" />
+    <meta name="theme-color" content="#ffffff" />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <link
+      rel="apple-touch-icon"
+      sizes="57x57"
+      href="/images/icons/apple-icon-57x57.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="60x60"
+      href="/images/icons/apple-icon-60x60.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="72x72"
+      href="/images/icons/apple-icon-72x72.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="76x76"
+      href="/images/icons/apple-icon-76x76.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="114x114"
+      href="/images/icons/apple-icon-114x114.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="120x120"
+      href="/images/icons/apple-icon-120x120.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="144x144"
+      href="/images/icons/apple-icon-144x144.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="152x152"
+      href="/images/icons/apple-icon-152x152.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="/images/icons/apple-icon-180x180.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="192x192"
+      href="/images/icons/android-icon-192x192.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="/images/icons/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="96x96"
+      href="/images/icons/favicon-96x96.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="/images/icons/favicon-16x16.png"
+    />
+    <link rel="manifest" href="/manifest.json" />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css?family=Padauk:400,500,700"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/@mdi/font@latest/css/materialdesignicons.min.css"
+    />
+    <link rel="stylesheet" href="/css/style.css" />
+    <style>
+      [lang="mm"],
+      [lang="mm"] * {
+        font-family: "Padauk", "Pyidaungsu", sans-serif;
+      }
 
-<head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0" />
-  <meta name="fb:app_id" property="fb:app_id" content="1240461186326353" />
-  <meta name="fb:pages" property="fb:pages" content="113483134124452" />
-  <meta name="og:title" property="og:title" content="NweOo">
-  <meta name="og:description" property="og:description"
-    content="SMS ပေးပို့ပြီး အွန်လိုင်းပေါ်တင်နိုင်သလို သတင်းတွေလည်းရယူနိုင်ပါတယ်။" />
-  <meta name="og:url" property="og:url" content="https://nweoo.com" />
-  <meta name="og:type" property="og:type" content="website" />
-  <meta name="og:image" property="og:image" content="https://nweoo.com/images/cover.jpg" />
-  <title>NweOo</title>
-  <meta name="mobile-web-app-capable" content="yes" />
-  <meta name="msapplication-TileImage" content="/images/icons/ms-icon-144x144.png" />
-  <meta name="msapplication-TileColor" content="#ffffff" />
-  <meta name="theme-color" content="#ffffff" />
-  <meta name="apple-mobile-web-app-capable" content="yes" />
-  <link rel="apple-touch-icon" sizes="57x57" href="/images/icons/apple-icon-57x57.png" />
-  <link rel="apple-touch-icon" sizes="60x60" href="/images/icons/apple-icon-60x60.png" />
-  <link rel="apple-touch-icon" sizes="72x72" href="/images/icons/apple-icon-72x72.png" />
-  <link rel="apple-touch-icon" sizes="76x76" href="/images/icons/apple-icon-76x76.png" />
-  <link rel="apple-touch-icon" sizes="114x114" href="/images/icons/apple-icon-114x114.png" />
-  <link rel="apple-touch-icon" sizes="120x120" href="/images/icons/apple-icon-120x120.png" />
-  <link rel="apple-touch-icon" sizes="144x144" href="/images/icons/apple-icon-144x144.png" />
-  <link rel="apple-touch-icon" sizes="152x152" href="/images/icons/apple-icon-152x152.png" />
-  <link rel="apple-touch-icon" sizes="180x180" href="/images/icons/apple-icon-180x180.png" />
-  <link rel="icon" type="image/png" sizes="192x192" href="/images/icons/android-icon-192x192.png" />
-  <link rel="icon" type="image/png" sizes="32x32" href="/images/icons/favicon-32x32.png" />
-  <link rel="icon" type="image/png" sizes="96x96" href="/images/icons/favicon-96x96.png" />
-  <link rel="icon" type="image/png" sizes="16x16" href="/images/icons/favicon-16x16.png" />
-  <link rel="manifest" href="/manifest.json" />
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Padauk:400,500,700" />
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@mdi/font@latest/css/materialdesignicons.min.css" />
-  <link rel="stylesheet" href="/css/style.css">
-  <style>
-    [lang=mm],
-    [lang=mm] * {
-      font-family: 'Padauk', 'Pyidaungsu', sans-serif;
-    }
+      [lang="zg"] {
+        font-family: "Noto Sans Zawgyi" !important;
+      }
+    </style>
+    <script
+      data-ad-client="ca-pub-1414295736005860"
+      async
+      src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"
+    ></script>
+    <script
+      async
+      custom-element="amp-auto-ads"
+      src="https://cdn.ampproject.org/v0/amp-auto-ads-0.1.js"
+    ></script>
+  </head>
 
-    [lang=zg] {
-      font-family: 'Noto Sans Zawgyi' !important;
-    }
-  </style>
-  <script data-ad-client="ca-pub-1414295736005860" async
-    src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-  <script async custom-element="amp-auto-ads" src="https://cdn.ampproject.org/v0/amp-auto-ads-0.1.js">
-  </script>
-</head>
-
-<body>
-  <amp-auto-ads type="adsense" data-ad-client="ca-pub-1414295736005860"></amp-auto-ads>
-  <noscript>
-    <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled.
-        Please enable it to continue.</strong>
-  </noscript>
-  <div id="app"></div>
-  <!-- Load Facebook SDK for JavaScript -->
-  <div id="fb-root"></div>
-  <script>
-    window.fbAsyncInit = function () {
-      FB.init({
-        xfbml: true,
-        version: 'v10.0'
-      });
-    };
-    (function (d, s, id) {
-      var js, fjs = d.getElementsByTagName(s)[0];
-      if (d.getElementById(id)) return;
-      js = d.createElement(s); js.id = id;
-      js.src = 'https://connect.facebook.net/en_US/sdk/xfbml.customerchat.js';
-      fjs.parentNode.insertBefore(js, fjs);
-    }(document, 'script', 'facebook-jssdk'));
-  </script>
-  <div class="fb-customerchat" attribution="setup_tool" page_id="113483134124452"></div>
-  <!-- built files will be auto injected -->
-</body>
-
+  <body>
+    <amp-auto-ads
+      type="adsense"
+      data-ad-client="ca-pub-1414295736005860"
+    ></amp-auto-ads>
+    <noscript>
+      <strong
+        >We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work
+        properly without JavaScript enabled. Please enable it to
+        continue.</strong
+      >
+    </noscript>
+    <div id="app"></div>
+    <!-- Load Facebook SDK for JavaScript -->
+    <div id="fb-root"></div>
+    <script>
+      window.fbAsyncInit = function() {
+        FB.init({
+          xfbml: true,
+          version: "v10.0"
+        });
+      };
+      (function(d, s, id) {
+        var js,
+          fjs = d.getElementsByTagName(s)[0];
+        if (d.getElementById(id)) return;
+        js = d.createElement(s);
+        js.id = id;
+        js.src = "https://connect.facebook.net/en_US/sdk/xfbml.customerchat.js";
+        fjs.parentNode.insertBefore(js, fjs);
+      })(document, "script", "facebook-jssdk");
+    </script>
+    <div
+      class="fb-customerchat"
+      attribution="setup_tool"
+      page_id="113483134124452"
+    ></div>
+    <!-- built files will be auto injected -->
+  </body>
 </html>
