remove meta tag name property for facebook crawler

--- a/public/index.html
+++ b/public/index.html
@@ -8,21 +8,16 @@
       name="viewport"
       content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0"
     />
-    <meta name="fb:app_id" property="fb:app_id" content="1240461186326353" />
-    <meta name="fb:pages" property="fb:pages" content="113483134124452" />
-    <meta name="og:title" property="og:title" content="NweOo" />
+    <meta property="fb:app_id" content="1240461186326353" />
+    <meta property="fb:pages" content="113483134124452" />
+    <meta property="og:title" content="NweOo" />
     <meta
-      name="og:description"
       property="og:description"
       content="သတင်းမှန်များကို အချိန်နဲ့တပြေးညီ သိရှိနိုင်အောင် ဆောင်ရွက်ပေးနေပါတယ်။"
     />
-    <meta name="og:url" property="og:url" content="https://www.nweoo.com" />
-    <meta name="og:type" property="og:type" content="website" />
-    <meta
-      name="og:image"
-      property="og:image"
-      content="https://nweoo.com/images/cover.jpg"
-    />
+    <meta property="og:url" content="https://www.nweoo.com" />
+    <meta property="og:type" content="website" />
+    <meta property="og:image" content="https://nweoo.com/images/cover.jpg" />
     <title>NweOo</title>
     <meta name="mobile-web-app-capable" content="yes" />
     <meta
