--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,8 @@
       property="og:description"
       content="သတင်းမှန်များကို အချိန်နဲ့တပြေးညီ သိရှိနိုင်အောင် ဆောင်ရွက်ပေးနေပါတယ်။"
     />
-    <meta property="og:url" content="https://www.nweoo.com" />
+    c
+    <meta property="og:url" content="https://nweoo.com" />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://nweoo.com/images/cover.jpg" />
     <title>NweOo</title>
