--- a/public/index.html
+++ b/public/index.html
@@ -27,6 +27,7 @@
     <meta name="msapplication-TileColor" content="#ffffff" />
     <meta name="theme-color" content="#ffffff" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
+    <link rel="shortcut icon" href="/favicon.ico" />
     <link
       rel="apple-touch-icon"
       sizes="57x57"
@@ -105,6 +106,19 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/@mdi/font@latest/css/materialdesignicons.min.css"
     />
+    <link
+      rel="alternate"
+      type="application/json"
+      title="Latest News & Articles - NweOo [RSS]"
+      href="https://api.nweoo.com/feed?format=json"
+    />
+    <link
+      rel="alternate"
+      type="application/rss+xml"
+      title="Latest News & Articles - NweOo [RSS]"
+      href="https://api.nweoo.com/feed"
+    />
+    <link rel="sitemap" type="application/rss+xml" href="/sitemap.xml" />
     <link rel="stylesheet" href="/css/style.css" />
     <style>
       [lang="mm"],
