--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
-
-<html lang="mm">
+<html lang="my-MM">
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -18,6 +17,19 @@
     <meta property="og:url" content="https://nweoo.com" />
     <meta property="og:image" content="https://nweoo.com/images/cover.jpg" />
     <meta property="og:type" content="website" />
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org/",
+        "@type": "WebSite",
+        "name": "NweOo",
+        "url": "https://www.nweoo.com",
+        "potentialAction": {
+          "@type": "SearchAction",
+          "target": "https://www.nweoo.com/search?q={search_term_string}",
+          "query-input": "required name=search_term_string"
+        }
+      }
+    </script>
     <title>NweOo</title>
     <meta name="mobile-web-app-capable" content="yes" />
     <meta
@@ -98,45 +110,36 @@
       href="/images/icons/favicon-16x16.png"
     />
     <link rel="manifest" href="/manifest.json" />
+
     <link
-      rel="stylesheet"
+      rel="alternate"
+      type="application/rss+xml"
+      title="Latest News | NweOo"
+      href="/feed.xml"
+    />
+    <link
+      rel="preload"
+      as="style"
       href="https://fonts.googleapis.com/css?family=Padauk:400,500,700"
+    />
+    <link
+      rel="preload"
+      as="style"
+      href="https://cdn.jsdelivr.net/npm/@mdi/font@latest/css/materialdesignicons.min.css"
     />
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/@mdi/font@latest/css/materialdesignicons.min.css"
     />
-    <link
-      rel="alternate"
-      type="application/json"
-      title="Latest News & Articles - NweOo [RSS]"
-      href="https://api.nweoo.com/feed?format=json"
-    />
-    <link
-      rel="alternate"
-      type="application/rss+xml"
-      title="Latest News & Articles - NweOo [RSS]"
-      href="https://api.nweoo.com/feed"
-    />
     <link rel="sitemap" type="application/rss+xml" href="/sitemap.xml" />
     <link rel="stylesheet" href="/css/style.css" />
-    <style>
-      [lang="mm"],
-      [lang="mm"] * {
-        font-family: "Padauk", "Pyidaungsu", sans-serif;
-      }
-
-      [lang="zg"] {
-        font-family: "Noto Sans Zawgyi" !important;
-      }
-    </style>
     <script
+      defer
       data-ad-client="ca-pub-1414295736005860"
-      async
       src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"
     ></script>
     <script
-      async
+      defer
       custom-element="amp-auto-ads"
       src="https://cdn.ampproject.org/v0/amp-auto-ads-0.1.js"
     ></script>
