--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
     <meta property="og:url" content="https://nweoo.com" />
     <meta property="og:image" content="https://nweoo.com/images/cover.jpg" />
     <meta property="og:type" content="website" />
-    <script type="application/ld+json">
+    <script type="application/ld+json" id="ld">
       {
         "@context": "https://schema.org/",
         "@type": "WebSite",
