--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="my-MM">
+<html lang="my">
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -110,7 +110,6 @@
       href="/images/icons/favicon-16x16.png"
     />
     <link rel="manifest" href="/manifest.json" />
-
     <link
       rel="alternate"
       type="application/rss+xml"
@@ -127,29 +126,11 @@
       as="style"
       href="https://cdn.jsdelivr.net/npm/@mdi/font@latest/css/materialdesignicons.min.css"
     />
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/@mdi/font@latest/css/materialdesignicons.min.css"
-    />
     <link rel="sitemap" type="application/rss+xml" href="/sitemap.xml" />
     <link rel="stylesheet" href="/css/style.css" />
-    <script
-      defer
-      data-ad-client="ca-pub-1414295736005860"
-      src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"
-    ></script>
-    <script
-      defer
-      custom-element="amp-auto-ads"
-      src="https://cdn.ampproject.org/v0/amp-auto-ads-0.1.js"
-    ></script>
   </head>
 
   <body>
-    <amp-auto-ads
-      type="adsense"
-      data-ad-client="ca-pub-1414295736005860"
-    ></amp-auto-ads>
     <noscript>
       <strong
         >We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work
