--- a/public/index.html
+++ b/public/index.html
@@ -14,9 +14,34 @@
       property="og:description"
       content="သတင်းမှန်များကို အချိန်နဲ့တပြေးညီ သိရှိနိုင်အောင် ဆောင်ရွက်ပေးနေပါတယ်။"
     />
-    <meta property="og:url" content="https://nweoo.com" />
-    <meta property="og:image" content="https://nweoo.com/images/cover.jpg" />
+    <meta property="og:url" content="https://www.nweoo.com" />
+    <meta
+      property="og:image"
+      content="https://www.nweoo.com/images/cover.jpg"
+    />
     <meta property="og:type" content="website" />
+
+    <meta
+      name="twitter:card"
+      property="twitter:card"
+      content="summary_large_image"
+    />
+    <meta name="twitter:title" property="twitter:title" content="NweOo" />
+    <meta
+      name="twitter:description"
+      property="twitter:description"
+      content="သတင်းမှန်များကို အချိန်နဲ့တပြေးညီ သိရှိနိုင်အောင် ဆောင်ရွက်ပေးနေပါတယ်။"
+    />
+    <meta
+      name="twitter:url"
+      property="twitter:url"
+      content="https://www.nweoo.com/"
+    />
+    <meta
+      name="twitter:image"
+      property="twitter:image"
+      content="https://www.nweoo.com/images/cover.jpg"
+    />
     <script type="application/ld+json" id="ld">
       {
         "@context": "https://schema.org/",
