--- a/public/index.html
+++ b/public/index.html
@@ -55,6 +55,8 @@
         }
       }
     </script>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1414295736005860"
+      crossorigin="anonymous"></script>
     <title>NweOo</title>
     <meta name="mobile-web-app-capable" content="yes" />
     <meta
