--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="my">
+<html lang="my_MM">
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -7,8 +7,8 @@
       name="viewport"
       content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0"
     />
-    <meta property="fb:app_id" content="1240461186326353" />
-    <meta property="fb:pages" content="113483134124452" />
+    <meta property="fb:app_id" content="942678683197460" />
+    <meta property="fb:pages" content="102566085495550" />
     <meta property="og:title" content="NweOo" />
     <meta
       property="og:description"
@@ -20,7 +20,6 @@
       content="https://www.nweoo.com/images/cover.jpg"
     />
     <meta property="og:type" content="website" />
-
     <meta
       name="twitter:card"
       property="twitter:card"
@@ -42,21 +41,6 @@
       property="twitter:image"
       content="https://www.nweoo.com/images/cover.jpg"
     />
-    <script type="application/ld+json" id="ld">
-      {
-        "@context": "https://schema.org/",
-        "@type": "WebSite",
-        "name": "NweOo",
-        "url": "https://www.nweoo.com",
-        "potentialAction": {
-          "@type": "SearchAction",
-          "target": "https://www.nweoo.com/search?q={search_term_string}",
-          "query-input": "required name=search_term_string"
-        }
-      }
-    </script>
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1414295736005860"
-      crossorigin="anonymous"></script>
     <title>NweOo</title>
     <meta name="mobile-web-app-capable" content="yes" />
     <meta
